force-app/main/default/objects/Event_Notification_Service_Provider__mdt/Event_Notification_Service_Provider__mdt.object-meta.xml
<CustomObject>
    <label>Event Notification Service Provider</label>
    <pluralLabel>Event Notification Service Providers</pluralLabel>
</CustomObject>