force-app/main/default/objects/Event_Notification_Service_Provider__mdt/fields/Event_Entity__c.field-meta.xml
<CustomField>
    <fullName>Event_Entity__c</fullName>
    <label>Event Entity</label>
    <length>32</length>
    <type>Text</type>
</CustomField>