force-app/main/default/objects/Event_Notification_Service_Provider__mdt/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <label>Service Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>